-Update error messsages on API -Add S3 client(delete,upload,list,delete) and update API -Fix ip field population and port validation for app on schedule endpoint -Change pod_name with app_name for get pod results endpoint -Delete unused ListContainersAndDelete function from docker client -Add methods to delete load balancer and delete autoscaler -Fix get pods to wait for pods to be ready -Modify ParseFQLFilter to return specific errors -Update swagger
